--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@noriginmedia/norigin-spatial-navigation": "^2.1.0",
     "@tanstack/react-query": "^5.24.1",
+    "lodash": "^4.17.21",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-tv-space-navigation": "^3.6.0",
+    "styled-components": "^6.1.11",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.20.1",
+    "@types/lodash": "^4.17.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
