--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@noriginmedia/norigin-spatial-navigation": "^2.1.0",
+    "@react-spring/web": "^9.7.3",
     "@tanstack/react-query": "^5.24.1",
     "next": "14.1.0",
     "react": "^18",
