--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@noriginmedia/norigin-spatial-navigation": "^2.1.0",
     "@react-spring/web": "^9.7.3",
+    "add": "^2.0.6",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
