--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@million/lint": "latest",
     "@noriginmedia/norigin-spatial-navigation": "^2.1.0",
     "@react-spring/web": "^9.7.3",
     "add": "^2.0.6",
