--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@million/lint": "latest",
     "@noriginmedia/norigin-spatial-navigation": "^2.1.0",
     "@react-spring/web": "^9.7.3",
+    "@vercel/analytics": "^1.3.1",
     "add": "^2.0.6",
     "cookies-next": "^4.2.1",
     "next": "14.1.0",
