--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@million/lint": "latest",
     "@noriginmedia/norigin-spatial-navigation": "^2.1.0",
     "@react-spring/web": "^9.7.3",
     "@vercel/analytics": "^1.3.1",
     "add": "^2.0.6",
     "cookies-next": "^4.2.1",
+    "hls.js": "^1.5.11",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
